--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,11 @@ license = "MIT"
 env_logger = "0.10"
 log = "0.4"
 core = { path = "core" }
-net = { path = "net" }
 
 [workspace]
 resolver = "2"
 members = [
-    "", "app", "core", "css", "html", "layout", "net", "paint",
+    ".", "core", "css", "html", "layout", "net", "paint",
 ]
 
 [profile.dev]
