--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2024"
 winit = "0.29.10"
 softbuffer = "0.4.1"
 log = "0.4"
+
+html = { path = "../html" }
+css = { path = "../css" }
+layout = { path = "../layout" }
+paint = { path = "../paint" }
